@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="script.module.tulip" name="Tulip Library" version="3.0.1" provider-name="Twilight0">
+<addon id="script.module.tulip" name="Tulip Library" version="3.0.2" provider-name="Twilight0">
     <requires>
         <import addon="xbmc.addon" version="16.1.000"/>
         <import addon="script.module.kodi-six" version="0.0.2"/>
@@ -17,6 +17,7 @@
 - Utilize certifi for net module
 - Add ability to save locally unencrypted m3u8 ts video content
 - Update user agent strings
+- Change the way kodi version is obtained
 
 [B]2.9.X[/B]
 - Net module taken from ResolveURL and adapted
