@@ -2,6 +2,7 @@
 - Utilize certifi for net module
 - Add ability to save locally unencrypted m3u8 ts video content
 - Update user agent strings
+- Change the way kodi version is obtained
 
 [B]2.9.X[/B]
 - Net module taken from ResolveURL and adapted
